# GPT_Assistants

./: CADCAD Parameters.md  CADCAD Policies.md  CADCAD State Update Blocks.md  CADCAD State Variables.md  README.md  example.ipynb  pyproject.toml
src/: main.py
