[tool.poetry]
name = "gpt-assistants"
version = "0.1.0"
description = "helpful language model  assistants for my daily tasks"
authors = ["Rohan Mehta <e4rohan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
faiss-cpu = "^1.8.0"
scikit-learn = "^1.5.0"
openai = "^1.30.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
